[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nsf"
authors = [{name = "Vol Ky", email = "vol@wilab.org.ua"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "scipy",
    "torch",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
]

[project.urls]
Home = "https://github.com/proger/nsf"
